Prevent container queries from being used with block alignment settings.
The `justify-self` property, when applied to css grids, relies on being able to calculate the width of its contents. The `container-type: inline-size` rule that enables container queries also eliminates the ability to determine child element widths. The two do not play nice together, so this fix prevents block with alignment settings from having container queries.

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -682,6 +682,12 @@ footer {
     container-type: inline-size;
 }
 
+.page-layout-grid .block-media.block-layout-alignment-block-right,
+.page-layout-grid .block-media.block-layout-alignment-block-left,
+.page-layout-grid .block-media.block-layout-alignment-block-center {
+    container-type: normal;
+}
+
 .page-layout-grid .block-media.has-background {
     align-self: start;
 }
